# crypto-price-prediction

./: .gitignore  Makefile  README.md  kubeconfig  mise.toml  pyproject.toml  set_time.bat
.devcontainer/: devcontainer.json  postCreateCommand.sh
dashboards/: candles.json
deployment/dev/: set.bat
deployment/dev/candles/: candles.yaml
deployment/dev/kind/: create_cluster.sh  install_kafka.sh  setup_kafka.bat
deployment/dev/technical_indicator/: technical_indicator.yaml
deployment/dev/trades/: trades.yaml
deployment/prod/: .envrc
deployment/prod/kind/: create_cluster.bat
deployment/prod/trades/: trades.yaml
deployments/dev/backfill-technical-indicators/: backfill-technical-indicators.yaml
deployments/dev/candles/: candles.yaml
deployments/dev/kind/: create_cluster.sh  install_grafana.sh  install_kafka_ui.bat  install_kafka_ui.sh  kind-with-portmapping.yaml  setup_kafka.bat
deployments/dev/technical_indicator/: technical_indicator.yaml
deployments/prod/: kustomization.yaml  set.bat
deployments/prod/candles/: candles.yaml
docker/: candles.Dockerfile  technical_indicator.Dockerfile  trades.Dockerfile
lessons/: 00_how_to_setup_your_development_environment.md  01_create_local_kubernetes_cluster.md  session1.md
scripts/: build-and-push-image.sh  deploy.sh
services/candles/: pyproject.toml
services/technical_indicator/: pyproject.toml
services/technical_indicator/src/technical_indicator/: __init__.py  candle.py  candles.py  config.py  indicators.py  main.py  query.sql  table.py
services/trades/: pyproject.toml
services/trades/src/trades/: config.py  kraken_api.py  kraken_rest_api.py  main.py
(+7 files in other folders)
